Fix minor mistake in alignment of GEWIS logo

--- a/public/scss/modules/_privacy-widget.scss
+++ b/public/scss/modules/_privacy-widget.scss
@@ -76,6 +76,7 @@
             text-align: center;
             color: #FFFFFF;
             display: inline-block;
+            line-height: inherit;
         }
     }
 }
